--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,11 @@
 
     <!-- build:js js/vendor.js -->
       <!-- ES6-related imports -->
-      <script src="/js/traceur.js"></script>
+      <script src="/js/traceur-runtime.js"></script>
       <script src="/js/system.js"></script>
       <script src="/js/angular2.js"></script>
+      <script src="/js/http.js"></script>
+      <script src="/js/router.dev.js"></script>
     <!-- endbuild -->
 
     <script>
