--- a/src/index.html
+++ b/src/index.html
@@ -2,23 +2,32 @@
   <head>
     <title>Angular 2 QuickStart</title>
     <!-- build:css css/styles.css -->
-
     <!-- endbuild -->
+
+    <!-- base url -->
+    <base href="/">
+
+    <!-- build:js libs/runtime.js -->
+      <script src="/libs/es6-shim/es6-shim.min.js"></script>
+      <script src="/libs/systemjs/dist/system.js"></script>
+    <!-- endbuild -->
+
   </head>
   <body>
-    <my-app>loading...</my-app>
+    <app>loading...</app>
 
-    <!-- build:js js/vendor.js -->
-      <!-- ES6-related imports -->
-      <script src="/js/traceur-runtime.js"></script>
-      <script src="/js/system.js"></script>
-      <script src="/js/angular2.js"></script>
-      <script src="/js/http.js"></script>
-      <script src="/js/router.dev.js"></script>
+    <script type="text/javascript">
+      System.defaultJSExtensions = true;
+    </script>
+
+    <!-- build:js libs/vendor.js -->
+      <script src="/libs/angular2/bundles/angular2.js"></script>
+      <script src="/libs/angular2/bundles/http.js"></script>
+      <script src="/libs/angular2/bundles/router.js"></script>
     <!-- endbuild -->
 
-    <script>
-        System.import('./js/app.js').catch(console.log.bind(console));
+    <script type="text/javascript">
+      System.import('js/app/bootstrap').catch(console.log.bind(console));
     </script>
 
   </body>
